--- a/client/css/score.css
+++ b/client/css/score.css
@@ -43,6 +43,7 @@ body, html{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: scroll;
 }
 
 .score__title{
